# model_zoo_voiceprint

./: .gitignore  API.md  CMakeLists.txt  NOTICE  README.md  package.xml  test.yaml
include/: vp_service.h
src/: audio_recorder.cpp  audio_recorder.h  vp_backend.h  vp_backend_factory.cpp  vp_engine.cpp  vp_presets.cpp  wave_reader.cpp  wave_reader_internal.h
src/backends/campplus/: campplus_backend.cpp  onnx_model.cpp  onnx_model.h
src/common/: mel_filterbank.cpp  mel_filterbank.h
tests/: test_fake_backend_contract.sh  test_invalid_input_error_path.sh  voiceprint_pr_contract_test.cpp
tools/: identify_speaker.cpp  register_speaker.cpp
